objects/Applicants__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Qualifications__c</fullName>
        <label>Qualifications</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>SSN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Applicant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Salary__c</columns>
        <columns>SSN__c</columns>
        <columns>Qualifications__c</columns>
        <columns>Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>My High-Value Applicants</label>
    </listViews>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>